--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ defusedxml==0.6.0
 entrypoints==0.3
 idna==2.10
 ipykernel==5.3.4
+ipynb==0.5.1
 ipython==7.18.1
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
@@ -50,6 +51,7 @@ parso==0.7.1
 pickleshare==0.7.5
 prometheus-client==0.8.0
 prompt-toolkit==3.0.8
+psycopg2==2.8.6
 pycparser==2.20
 Pygments==2.7.2
 pylint==2.6.0
