--- a/textual_database_api/TextualDatabaseApi.WebApi/appsettings.json
+++ b/textual_database_api/TextualDatabaseApi.WebApi/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TextualDatabase": "host=localhost;database=TextDb;user=dbUser;password=dbPass"
+    "TextualDatabase": "Host=localhost;Port=5432;Database=TextDb;Username=dbUser;Password=dbPass"
   }
 }
