--- a/textual_database_api/TextualDatabaseApi.WebApi/appsettings.json
+++ b/textual_database_api/TextualDatabaseApi.WebApi/appsettings.json
@@ -6,8 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "FreeLingAnalyzerClient": "D:\\Sources\\TFG\\analyzer_client.exe",
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TextualDatabase": "Host=localhost;Port=5432;Database=TextDb;Username=dbUser;Password=dbPass"
+    "TextualDatabasePg": "Host=localhost;Port=5432;Database=TextDb;Username=dbUser;Password=dbPass",
+    "TextualDatabaseMsSql":"Server=(localdb)\\mssqllocaldb;Database=TextualDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
