--- a/TextualApi/src/TextualApi.WebApi/TextualApi.WebApi.csproj
+++ b/TextualApi/src/TextualApi.WebApi/TextualApi.WebApi.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TextualApi.Application\TextualApi.Application.csproj" />
+    <ProjectReference Include="..\TextualApi.Infrastructure\TextualApi.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
