--- a/TextualApi/src/TextualApi.WebApi/appsettings.json
+++ b/TextualApi/src/TextualApi.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Elasticsearch": "http://elastic:password@localhost:9200"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
