jobs... steve jobs

--- a/TextualApi/src/TextualApi.WebApi/appsettings.json
+++ b/TextualApi/src/TextualApi.WebApi/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Elasticsearch": "http://elastic:password@localhost:9200"
+    "Elasticsearch": "http://elastic:password@localhost:9200",
+    "RabbitMQ": "localhost"
   },
   "Logging": {
     "LogLevel": {
