--- a/TextualApi/src/TextualApi.Infrastructure/TextualApi.Infrastructure.csproj
+++ b/TextualApi/src/TextualApi.Infrastructure/TextualApi.Infrastructure.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="NEST" Version="7.10.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
   </ItemGroup>
 
   <ItemGroup>
